# OllamaCode

./: .gitignore  README.md  ollamacode.py  package-lock.json  package.json  pyproject.toml  readme.txt  setup.py  test_plugin.py
lib/: agent.js  config.js  terminal.js  ui.js  utils.js
ollamacode/: agent.py  config.py  main.py  terminal.py  ui.py  utils.py
